@@ -2,10 +2,17 @@ Revision history for Perl extension Math::Prime::Util::GMP
 
 0.08  22 March 2013
 
+    - The new ECM and QS make factoring much faster, especially for 30+
+      digit inputs.  Factoring should give reasonable times out to 70+
+      digits now.
+
     - Add William Hart's SIMPQS (a simple QS that is a predecessor to what
       went into FLINT).  Not the fastest by a long shot (yafu and msieve take
       that prize), but it's quite small and works pretty well.  Eventually I
       would like to replace this with a QS of my own.
+
+    - Switch to a projective ECM with a stage 2.  Much better results, but
+      note that it doesn't build up to B1 like the old version.
 
 0.07  19 March 2013
 
